<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TestFragment" >

    <EditText
        android:id="@+id/phoneIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="80dp"
        android:layout_toLeftOf="@+id/buttonagenda"
        android:ems="10"
        android:inputType="phone" 
        android:hint="+34123123123">

         <requestFocus />
      </EditText>
    
   
    <Button
        android:id="@+id/buttontest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/phoneIn"
        android:layout_alignRight="@+id/buttonagenda"
        android:layout_below="@+id/phoneIn"
        android:layout_marginTop="41dp"
        android:background="@drawable/buttoncustom"
        android:text="@string/testbutton" 
        android:textColor="@android:color/white"
        />

    <Button
        android:id="@+id/buttonagenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttontest"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/buttoncustom"       
        android:text="@string/agendabutton"
        android:textColor="@android:color/white"
         />

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttontest"
        android:layout_alignRight="@+id/buttontest"
        android:layout_below="@+id/buttontest"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="27dp"
        android:text="@string/testresults"
        android:textAppearance="?android:attr/textAppearanceLarge"
               
         />

    <TextView
        android:id="@+id/results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/label"
        android:layout_below="@+id/label"
        android:layout_marginTop="17dp"
        android:text="" />
  
</RelativeLayout>
